--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_movie_detail">MovieDetailActivity</string>
     <string name="player_error">Error initializing YouTube player: %s</string>
+    <string name="title_activity_tvshow_detail">TVShowDetailActivity</string>
 </resources>
